# work-shmirk

./: CLAUDE.md  Cargo.toml  README.md
docs/: contract.md
src/: cli.rs  config.rs  copyfiles.rs  git.rs  issue.rs  lib.rs  main.rs  prompt.rs  removal.rs  symlinks.rs  tmux.rs  worktree.rs
tests/: invalid_name_rejected.rs  new_creates_worktree.rs  new_propagates_claude_failure.rs  new_tmux_flow.rs  new_with_config.rs  path_traversal_rejected.rs  remove_defaults_to_current.rs  remove_preserves_existing_branch.rs  remove_rejects_non_dir_target_cfg.rs  remove_tears_down.rs
tests/common/: mod.rs
