[package]
name = "work-shmirk"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[[bin]]
name = "work-shmirk"
path = "src/main.rs"

[lib]
name = "work_shmirk"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
